# trading-rl

./: .gitignore  Makefile  README.md  pyproject.toml  train_forex_ppo.py
.github/workflows/: ci.yml
src/: utils.py
src/forex_rl_trading/: __init__.py  features.py
src/forex_rl_trading/envs/: __init__.py  forex.py
tests/: test_env_smoke.py  test_features.py
